[tool.poetry]
name = "plc4x"
version = "0.1.0"
description = "Implementation of the Apache PLC4X project for Python"
license = "Apache-2.0"
authors = ["Apache PLC4X <dev@plc4x.apache.org>"]

[tool.poetry.dependencies]
python = "^3.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
