# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "plc4rust"
version = "0.10.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#[lib]
#crate-type = ["cdylib"]

[dependencies]
paste = "1.0.7"

[profile.release]
# See https://kerkour.com/optimize-rust-binary-size
opt-level = "z"
lto = true
codegen-units = 1
#rustflags=["-C prefer-dynamic"]

# Also build the driver modules ...
[workspace]
members = [
    "generated-sources/modbus",
    "server"
]