[package]
name = "plc4rust-modbus-server"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = {version= "1.18.2", features = ["full"]}
plc4rust = {path = "../"}
